--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -8,8 +8,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "resolveJsonModule": true
+    "rootDir": "./src"
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist"]
