--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
+    "@types/dotenv": "^8.2.3",
     "@types/node": "^20.11.24",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
