--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fairmint/canton-scripts": "workspace:*",
+    "@fairmint/canton-scripts": "file:../scripts",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
