--- a/src/OpenCapTable-v00/daml.yaml
+++ b/src/OpenCapTable-v00/daml.yaml
@@ -5,6 +5,9 @@ version: 0.0.1
 dependencies:
   - daml-prim
   - daml-stdlib
+data-dependencies:
+  - ../../libs/splice/daml/dars/splice-amulet-0.1.9.dar
+  - ../../libs/splice/daml/dars/splice-util-0.1.3.dar
 exposed-modules:
   - StockClass
   - StockClassType
