--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-AUTH_URL=
-LEDGER_API_URL=
-CLIENT_ID=
-AUDIENCE=
-CLIENT_SECRET=
-FAIRMINT_PARTY_ID=
-FAIRMINT_USER_ID=
+PROVIDERS='[
+  {
+    "PROVIDER_NAME": "",
+    "AUTH_URL": "",
+    "LEDGER_API_URL": "",
+    "CLIENT_ID": "",
+    "AUDIENCE": "",
+    "CLIENT_SECRET": "",
+    "FAIRMINT_PARTY_ID": "",
+    "FAIRMINT_USER_ID": ""
+  }
+]'
