Upload dar script

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,6 +5,7 @@
   "main": "dist/demo.js",
   "scripts": {
     "start:demo": "ts-node src/demo.ts",
+    "upload:package": "ts-node src/uploadPackage.ts",
     "build": "tsc",
     "tailLogs": "stern participant --kubeconfig .secrets/devnet --config ./stern.yaml"
   },
