Fix env example

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,7 @@ CANTON_PROVIDERS='[
       "AUDIENCE":"",
       "CLIENT_SECRET":"",
       "PARTY_ID":"",
-      "USER_ID":"",
-      "SCOPE": "daml-ledger-api"
+      "USER_ID":""
     },
     "VALIDATOR_API": {
       "API_URL": "",
