--- a/ui/package.json
+++ b/ui/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --fix",
-    "lint:check": "eslint ."
+    "lint": "npm run lint:check -- --fix",
+    "lint:check": "npx --prefix .. eslint . --config ../eslint.config.mjs"
   },
   "dependencies": {
     "@fairmint/canton-scripts": "file:../scripts",
@@ -20,9 +20,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint-config-next": "14.1.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
