--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,11 @@ jobs:
             cd ui
             npm install
             npm run build
+      - run:
+          name: Lint & Format
+          command: |
+            npm run lint:check
+            npm run format:check
 
 workflows:
   build-and-test-workflow:
