--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "docker": "docker pull digitalasset/canton-open-source && docker run --rm -it digitalasset/canton-open-source --no-tty -C canton.participants.p.ledger-api.port=1234",
     "sandbox": "npm run build && cd src/Sandbox && daml start",
     "test": "npm run build && cd src/Test && daml test",
-    "lint": "eslint . --fix",
-    "lint:check": "eslint .",
+    "lint": "eslint . --fix --max-warnings=0",
+    "lint:check": "eslint . --max-warnings=0",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
