--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:ui": "cd ui && npm run build",
     "clean": "find . -type d \\( -name '.daml' -o -name 'logs' \\) -exec rm -rf {} +",
     "docker": "docker pull digitalasset/canton-open-source && docker run --rm -it digitalasset/canton-open-source --no-tty -C canton.participants.p.ledger-api.port=1234",
-    "test": "npm run build && cd daml/Test && daml test",
+    "test": "npm run test:daml",
+    "test:daml": "cd daml/Test && daml test",
     "lint": "eslint . --fix --max-warnings=0",
     "lint:check": "eslint . --max-warnings=0",
     "format": "prettier --write .",
