Stub validator API (#13)

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,24 @@
-PROVIDERS='[
+CANTON_PROVIDERS='[
   {
-    "PROVIDER_NAME": "",
-    "AUTH_URL": "",
-    "LEDGER_API_URL": "",
-    "CLIENT_ID": "",
-    "AUDIENCE": "",
-    "CLIENT_SECRET": "",
-    "FAIRMINT_PARTY_ID": "",
-    "FAIRMINT_USER_ID": ""
+    "PROVIDER_NAME":"",
+    "AUTH_URL":"",
+    "JSON_API": {
+      "API_URL":"",
+      "GRANT_TYPE": "",
+      "CLIENT_ID":"",
+      "AUDIENCE":"",
+      "CLIENT_SECRET":"",
+      "PARTY_ID":"",
+      "USER_ID":""
+    },
+    "VALIDATOR_API": {
+      "API_URL": "",
+      "GRANT_TYPE": "",
+      "CLIENT_ID": "",
+      "USERNAME": "",
+      "PASSWORD": "",
+      "PARTY_ID":"",
+      "USER_ID":""
+    }
   }
 ]'
