--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,22 +14,22 @@ jobs:
               echo "Please add GITHUB_TOKEN to your CircleCI project environment variables"
               exit 1
             fi
-            
+
             # Install Git LFS if not already available
             curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
             sudo apt-get install git-lfs
-            
+
             # Configure Git LFS authentication using GitHub token
             git config --global credential.helper store
             echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > ~/.git-credentials
-            
+
             # Alternative SSH-based authentication (uncomment if using SSH keys):
             # mkdir -p ~/.ssh
             # echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
             # chmod 600 ~/.ssh/id_rsa
             # ssh-keyscan github.com >> ~/.ssh/known_hosts
             # git config --global url."git@github.com:".insteadOf "https://github.com/"
-            
+
             # Initialize Git LFS
             git lfs install
       - checkout:
@@ -41,17 +41,17 @@ jobs:
             # Ensure Git LFS is configured for submodules
             git config --global credential.helper store
             echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > ~/.git-credentials
-            
+
             # Debug: Check Git LFS configuration
             echo "Git LFS version:"
             git lfs version
-            
+
             echo "Git credential configuration:"
             git config --global --list | grep credential
-            
+
             # Initialize and update submodules with LFS support
             git submodule update --init
-            
+
             # Debug: Check if LFS files were downloaded
             echo "Checking for LFS files in submodules:"
             find . -name "*.png" -exec git lfs ls-files {} \; 2>/dev/null || echo "No LFS files found or LFS not tracking PNG files"
@@ -84,24 +84,22 @@ jobs:
             # Verify npm version:
             npm -v # Should print "10.9.2".
       - run:
-          name: Build and Test
+          name: Install Dependencies
+          command: |
+            npm install
+            cd scripts && npm install && cd ..
+            cd ui && npm install && cd ..
+      - run:
+          name: Build
+          command: npm run build
+      - run:
+          name: Test
           command: npm run test
       - run:
-          name: Codegen
-          command: npm run codegen
-      - run:
-          name: Install and Build Scripts
+          name: Lint & Format
           command: |
-            cd scripts
-            npm install
-            npm run build
-      - run:
-          name: Install and Build UI
-          command: |
-            cd ui
-            npm install
-            npm run build
-
+            npm run lint:check
+            npm run format:check
 
 workflows:
   build-and-test-workflow:
