--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint . --fix --max-warnings=0",
     "lint:check": "eslint . --max-warnings=0",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "deploy": "vercel --prod --prebuilt"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
