--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:check": "eslint . --max-warnings=0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "deploy": "vercel --prod --prebuilt"
+    "deploy": "vercel --prebuilt"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "next": "14.1.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vercel": "^43.3.0"
   }
 }
