--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint . --fix --max-warnings=0",
     "lint:check": "eslint . --max-warnings=0",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "deploy": "vercel --prebuilt"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "next": "14.1.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vercel": "^43.3.0"
   }
 }
